# wuzhu_dispatch

./: .env.example  .gitignore  README.md  pyproject.toml
client/: requirements.txt  setup.py
client/dispatch_client/: cli_config.py  cli_skill.py  client.py  config_skill.py  main.py  runtime_skill.py  skill_config.py
common/dispatch_common/: __init__.py  auth_types.py  errors.py  schemas.py  task_types.py
compute-server/: requirements.txt  setup.py
compute-server/dispatch_compute_server/: cleanup.py  client.py  config.py  executor.py  main.py  metrics.py
compute-server/dispatch_compute_server/executors/: docker_executor.py  hermes_executor.py  shell_executor.py
dispatcher/: requirements.txt
dispatcher/app/: auth.py  config.py  database.py  main.py  models.py  scheduler.py  schemas.py  templates.py
dispatcher/app/middleware/: ratelimit.py  (+1 more)
docs/: api.md  security.md
examples/: client.yaml
examples/compute/: node.cheaphk-ipv6.yaml  node.example-hk-highbw.yaml  node.example-ipv6-probe.yaml  node.example-us-large-traffic.yaml  node.hk99-300m.yaml  node.lacloud-us.yaml
examples/tasks/: collect_cn_stock.json  collect_global.json  hermes_task.json  probe_dns.json
scripts/: init_db.py  run_compute_server.sh  run_dispatcher.sh  test_cleanup.py  test_pipeline.py  test_route_integration.py  test_skill.py  test_templates.py
skills/dispatch-client/: SKILL.md
skills/dispatch-compute-server/: SKILL.md
skills/dispatch-dispatcher/: SKILL.md
skills/dispatch-worker-node/: SKILL.md
systemd/: wuzhu-compute-server.service  wuzhu-dispatcher.service
(+12 files in other folders)
