[project]
name = "wuzhu-dispatch"
version = "0.2.0"
description = "Heterogeneous server task distribution and compute service platform"
requires-python = ">=3.11"

[project.optional-dependencies]
dispatcher = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncmy>=0.2.9",
    "aiosqlite>=0.20.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "bcrypt>=4.1.0",
]
compute-server = [
    "requests>=2.31.0",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
]
client = [
    "click>=8.1.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
]
